--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="description" content="Work From Home">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+
 
     <!-- Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
